Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10966

`lfs check` documentation is misleading

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0
    • None
    • None
    • 3
    • 9223372036854775807

      `lfs check` command documentation and arguments are misleading,
      it is used to check targets, not servers, as documentation states (or am I wrong?).

       

      I propose to change man page and add new arguments:

      • mdts
      • all

      Proposing patch is in attachment.

            simmonsja James A Simmons
            melikov George Melikov (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: